--- a/src/pja/s11531/nai/NeuronTester.form
+++ b/src/pja/s11531/nai/NeuronTester.form
@@ -18,7 +18,7 @@
         <border type="none"/>
         <children/>
       </grid>
-      <grid id="2e67e" binding="configPane" layout-manager="GridLayoutManager" row-count="6" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="2e67e" binding="configPane" layout-manager="GridLayoutManager" row-count="8" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="7" left="7" bottom="7" right="7"/>
         <constraints border-constraint="Center"/>
         <properties/>
@@ -30,7 +30,9 @@
                 <preferred-size width="200" height="24"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <text value="1"/>
+            </properties>
           </component>
           <component id="5a899" class="javax.swing.JTextField" binding="input2">
             <constraints>
@@ -38,15 +40,19 @@
                 <preferred-size width="200" height="24"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <text value="1"/>
+            </properties>
           </component>
-          <component id="76b44" class="javax.swing.JTextField" binding="input3">
+          <component id="76b44" class="javax.swing.JTextField" binding="input0">
             <constraints>
               <grid row="2" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="200" height="24"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <text value="0"/>
+            </properties>
           </component>
           <component id="82217" class="javax.swing.JLabel">
             <constraints>
@@ -69,7 +75,7 @@
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="&lt;html&gt;X&lt;sub&gt;0&lt;/sub&gt;"/>
+              <text value="&lt;html&gt;X&lt;sub&gt;0&lt;/sub&gt; / θ"/>
             </properties>
           </component>
           <component id="74a52" class="javax.swing.JLabel">
@@ -110,6 +116,7 @@
               <grid row="3" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <enabled value="false"/>
               <model>
                 <item value="Step"/>
                 <item value="Sigmoidal / tanh"/>
@@ -118,9 +125,42 @@
           </component>
           <vspacer id="4ac81">
             <constraints>
-              <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+              <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </vspacer>
+          <component id="39dc9" class="javax.swing.JButton" binding="calculateButton" default-binding="true">
+            <constraints>
+              <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Calculate"/>
+            </properties>
+          </component>
+          <component id="b9237" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Rounding"/>
+            </properties>
+          </component>
+          <component id="dcd72" class="javax.swing.JRadioButton" binding="upRadioButton" default-binding="true">
+            <constraints>
+              <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <selected value="true"/>
+              <text value="Up"/>
+            </properties>
+          </component>
+          <component id="d61b4" class="javax.swing.JRadioButton" binding="downRadioButton" default-binding="true">
+            <constraints>
+              <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Down"/>
+            </properties>
+          </component>
         </children>
       </grid>
     </children>
@@ -130,6 +170,11 @@
       <member id="55e2f"/>
       <member id="55e2f"/>
       <member id="e9a3e"/>
+    </group>
+    <group name="roundingMode">
+      <member id="d61b4"/>
+      <member id="d61b4"/>
+      <member id="dcd72"/>
     </group>
   </buttonGroups>
 </form>
