--- a/src/pja/s11531/nai/NeuronTester.form
+++ b/src/pja/s11531/nai/NeuronTester.form
@@ -256,21 +256,6 @@
         <properties/>
         <border type="line" title="Learning"/>
         <children>
-          <scrollpane id="1d635">
-            <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties/>
-            <border type="none"/>
-            <children>
-              <component id="c158" class="javax.swing.JTable" binding="learningSetsTable">
-                <constraints/>
-                <properties>
-                  <preferredScrollableViewportSize width="400" height="100"/>
-                </properties>
-              </component>
-            </children>
-          </scrollpane>
           <grid id="dde0d" layout-manager="GridLayoutManager" row-count="1" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
@@ -339,6 +324,19 @@
               </component>
             </children>
           </grid>
+          <scrollpane id="b7756">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="a7682" class="javax.swing.JList" binding="learningSetsList">
+                <constraints/>
+                <properties/>
+              </component>
+            </children>
+          </scrollpane>
         </children>
       </grid>
     </children>
