--- a/src/pja/s11531/nai/NeuronTester.form
+++ b/src/pja/s11531/nai/NeuronTester.form
@@ -9,15 +9,6 @@
       <size top="10" left="10" bottom="10" right="10"/>
     </border>
     <children>
-      <grid id="4e7a3" binding="visualizationPane" custom-create="true" layout-manager="BorderLayout" hgap="0" vgap="0">
-        <constraints border-constraint="West"/>
-        <properties>
-          <minimumSize width="200" height="200"/>
-          <preferredSize width="400" height="400"/>
-        </properties>
-        <border type="none"/>
-        <children/>
-      </grid>
       <grid id="2e67e" binding="configPane" layout-manager="GridLayoutManager" row-count="13" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="7" left="7" bottom="7" right="7"/>
         <constraints border-constraint="Center"/>
@@ -216,11 +207,11 @@
           </component>
           <component id="b9099" class="javax.swing.JTextField" binding="learningSetVariance">
             <constraints>
-              <grid row="10" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="10" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <horizontalAlignment value="11"/>
-              <text value="10"/>
+              <text value="2"/>
             </properties>
           </component>
           <component id="781b8" class="javax.swing.JLabel">
@@ -246,6 +237,20 @@
             </constraints>
             <properties>
               <text value="Add"/>
+            </properties>
+          </component>
+          <component id="404bf" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
+            <constraints>
+              <grid row="10" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <model>
+                <item value="Linear"/>
+                <item value="Uniform"/>
+                <item value="Exponential"/>
+                <item value="Inverted exp."/>
+              </model>
+              <toolTipText value="Distribution function"/>
             </properties>
           </component>
         </children>
@@ -339,6 +344,10 @@
           </scrollpane>
         </children>
       </grid>
+      <component id="2bfa" class="pja.s11531.nai.VisualizationPanel" binding="visualizationPane">
+        <constraints border-constraint="West"/>
+        <properties/>
+      </component>
     </children>
   </grid>
   <buttonGroups>
