--- a/src/pja/s11531/nai/NeuronTester.form
+++ b/src/pja/s11531/nai/NeuronTester.form
@@ -89,7 +89,7 @@
               <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <selected value="true"/>
+              <selected value="false"/>
               <text value="Unipolar"/>
               <toolTipText value="[0, 1]"/>
             </properties>
@@ -99,6 +99,7 @@
               <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <selected value="true"/>
               <text value="Bipolar"/>
               <toolTipText value="[-1, 1]"/>
             </properties>
@@ -315,7 +316,7 @@
                   <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
               </hspacer>
-              <component id="9e5d1" class="javax.swing.JSlider" binding="learningFactor">
+              <component id="9e5d1" class="javax.swing.JSlider" binding="learningFactorSlider">
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="200" height="-1"/>
@@ -357,7 +358,9 @@
                   <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <enabled value="false"/>
                   <text value="Learn"/>
+                  <toolTipText value="Start learning process. Neuron has to be set before."/>
                 </properties>
               </component>
             </children>
