--- a/src/pja/s11531/nai/gui/LearningDialog.form
+++ b/src/pja/s11531/nai/gui/LearningDialog.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="pja.s11531.nai.LearningDialog">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="pja.s11531.nai.gui.LearningDialog">
   <grid id="cbd77" binding="contentPane" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
@@ -111,7 +111,7 @@
               <text value=""/>
             </properties>
           </component>
-          <component id="aa6d4" class="pja.s11531.nai.VisualizationPanel" binding="visualizationPanel">
+          <component id="aa6d4" class="pja.s11531.nai.gui.VisualizationPanel" binding="visualizationPanel">
             <constraints>
               <grid row="6" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
                 <minimum-size width="400" height="400"/>
