--- a/src/pja/s11531/nai/neuron/gui/LearningDialog.form
+++ b/src/pja/s11531/nai/neuron/gui/LearningDialog.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="pja.s11531.nai.gui.LearningDialog">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="pja.s11531.nai.neuron.gui.LearningDialog">
   <grid id="cbd77" binding="contentPane" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
@@ -123,7 +123,7 @@
               <text value=""/>
             </properties>
           </component>
-          <component id="aa6d4" class="pja.s11531.nai.gui.VisualizationPanel" binding="visualizationPanel">
+          <component id="aa6d4" class="pja.s11531.nai.neuron.gui.VisualizationPanel" binding="visualizationPanel">
             <constraints>
               <grid row="6" column="0" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
                 <minimum-size width="400" height="400"/>
@@ -147,7 +147,7 @@
               <text value=""/>
             </properties>
           </component>
-          <component id="84b73" class="pja.s11531.nai.gui.SimpleGraph" binding="errorGraph">
+          <component id="84b73" class="pja.s11531.nai.neuron.gui.SimpleGraph" binding="errorGraph">
             <constraints>
               <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="30"/>
@@ -155,7 +155,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="edf00" class="pja.s11531.nai.gui.SimpleGraph" binding="differenceGraph">
+          <component id="edf00" class="pja.s11531.nai.neuron.gui.SimpleGraph" binding="differenceGraph">
             <constraints>
               <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="30"/>
