--- a/src/pja/s11531/nai/neuron/gui/NeuronTester.form
+++ b/src/pja/s11531/nai/neuron/gui/NeuronTester.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="pja.s11531.nai.gui.NeuronTester">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="pja.s11531.nai.neuron.gui.NeuronTester">
   <grid id="27dc6" binding="mainPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
       <xy x="20" y="20" width="1038" height="685"/>
@@ -388,7 +388,7 @@
           </scrollpane>
         </children>
       </grid>
-      <component id="2bfa" class="pja.s11531.nai.gui.VisualizationPanel" binding="visualizationPane">
+      <component id="2bfa" class="pja.s11531.nai.neuron.gui.VisualizationPanel" binding="visualizationPane">
         <constraints border-constraint="West"/>
         <properties>
           <minimumSize width="400" height="400"/>
